Add ByteBuddy runtime instrumentation for network blocking
Implements ByteBuddy-based network interception to complement existing
SocketImplFactory approach and prepare for Java 24+ compatibility.

Key components:
- NetworkBlockerContext: ThreadLocal configuration storage for Advice classes
- OkHttpAdvice: Intercepts okhttp3.internal.connection.RealConnection.connect()
- ByteBuddyNetworkBlocker: Main strategy using runtime agent installation

Test results: 28/57 passing (49% coverage)
- ✅ OkHttp/Retrofit interception working
- ✅ Configuration and localhost handling correct
- ❌ Limited coverage (HTTP clients only, no NIO support)

Next: Implement JVMTI native agent for comprehensive coverage including NIO

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>